--- a/.gitignore
+++ b/.gitignore
@@ -99,7 +99,7 @@ Assets/**/obj*
 _site/
 Documentation/api/
 Documentation/latest/api/
-Documentation/Changelog/CHANGELOG.md
+Documentation/**/CHANGELOG.md
 Documentation/Demo/
 Documentation/index.*
 Documentation/LICENSE.txt
