--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 /[Rr]ecordings/
 /[Cc]ode[Cc]overage/
 /[Tt]est[Rr]esults/
+/[Aa]ssets/[Ss]treaming[Aa]ssets/
 
 /[Pp]ackages/*/[Ss]amples~
 
@@ -21,6 +22,7 @@
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
+!/[Pp]ackages/**/*.meta
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
@@ -88,8 +90,8 @@ crashlytics-build.properties
 /[Aa]ssets/SceneDependencyCache.meta
 
 # Temporary assets creating for builds
-# /[Aa]ssets/StreamingAssets
-# /[Aa]ssets/StreamingAssets.meta
+/[Aa]ssets/StreamingAssets
+/[Aa]ssets/StreamingAssets.meta
 
 # Ignore package settings
 /ProjectSettings/Packages
