Added flag for tests validation to include assemblies

--- a/.github/workflows/tests-validation.yml
+++ b/.github/workflows/tests-validation.yml
@@ -30,7 +30,7 @@ jobs:
           unityVersion: ${{ env.UNITY_VERSION }}
           testMode: All
           checkName: All Test Results
-          customParameters: "-burst-disable-compilation -nographics"
+          customParameters: "-assemblyNames:com.nickmaltbie.TemplateUnityPackage"
 
       - name: Copy Coverage Results
         run: |
