--- a/.github/workflows/tests-validation.yml
+++ b/.github/workflows/tests-validation.yml
@@ -30,7 +30,7 @@ jobs:
           unityVersion: ${{ env.UNITY_VERSION }}
           testMode: All
           checkName: All Test Results
-          customParameters: "-assemblyNames:com.nickmaltbie.TemplateUnityPackage"
+          coverageOptions: 'generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;assemblyFilters:+nickmaltbie.TemplateUnityPackage'
 
       - name: Copy Coverage Results
         run: |
