--- a/Documentation/manual/toc.yml
+++ b/Documentation/manual/toc.yml
@@ -1,6 +1,6 @@
 - name: Introduction
   href: introduction.md
-- name: Package Setup
+- name: Package Setup and Installation
   href: package_setup.md
 - name: Rename Script
   href: rename_script.md
