--- a/.gitattributes
+++ b/.gitattributes
@@ -55,3 +55,7 @@
 *.rns filter=lfs diff=lfs merge=lfs -text
 *.reason filter=lfs diff=lfs merge=lfs -text
 *.lxo filter=lfs diff=lfs merge=lfs -text
+
+# Some files to ignore
+Demo/project-demo.png                       !filter !diff !merge text
+Documentation/resources/RenamePanel.png     !filter !diff !merge text
