Updated namespaces and removed project demo png

--- a/Packages/com.nickmaltbie.TemplateUnityPackage/Scripts/nickmaltbie.TemplateUnityPackage.asmdef
+++ b/Packages/com.nickmaltbie.TemplateUnityPackage/Scripts/nickmaltbie.TemplateUnityPackage.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "nickmaltbie.TemplateUnityPackage",
-    "rootNamespace": "com.nickmaltbie.TemplateUnityPackage",
+    "rootNamespace": "nickmaltbie.TemplateUnityPackage",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
