Added flag to ignore demo images

--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,7 @@ Documentation/index.*
 Documentation/LICENSE.txt
 Documentation/obj/
 Packages/**/obj*
+
+# Ignore the demo images
+Demo/project-demo.png
+Documentation/resources/RenamePanel.png
