--- a/.gitattributes
+++ b/.gitattributes
@@ -57,5 +57,5 @@
 *.lxo filter=lfs diff=lfs merge=lfs -text
 
 # Some files to ignore
-Demo/project-demo.png -filter=lfs -diff=lfs -merge=lfs -text
-Documentation/resources/RenamePanel.png -filter=lfs -diff=lfs -merge=lfs -text
+Demo/project_demo.png -filter=lfs -diff=lfs -merge=lfs -text
+Documentation/resources/rename_panel.png -filter=lfs -diff=lfs -merge=lfs -text
