Moved create-package to create-package workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -148,7 +148,7 @@ jobs:
         uses: joutvhu/delete-artifact@v1
         with:
           name: |
-            temp_build_webgl_build
+            temp_build_webgl
             temp_build_docs
             github-pages
 
